# akar

./: AGENTS.md  CLAUDE.md  Cargo.toml  DEVELOP.md  README.md  akar.h
crates/akar-c-api/: Cargo.toml  build.rs  cbindgen.toml
crates/akar-c-api/src/: lib.rs
crates/akar-c-api/tests/: api.rs  c_text_edit.rs  text_edit.c
crates/akar-components/: Cargo.toml
crates/akar-components/src/: alert.rs  avatar.rs  badge.rs  box_style.rs  button.rs  canvas.rs  checkbox.rs  color.rs  container.rs  data_item.rs  data_list.rs  drawer.rs  dropdown.rs  label.rs  lib.rs  modal.rs  navbar.rs  progress.rs  radio.rs  scroll_area.rs  select.rs  separator.rs  skeleton.rs  slider.rs  stat.rs  steps.rs  switch.rs  tabs.rs  text_edit.rs  text_input.rs  textarea.rs  theme.rs  toast.rs  tooltip.rs
crates/akar-core/: Cargo.toml
crates/akar-core/src/: context.rs  draw_list.rs  input.rs  lib.rs  quad_pipeline.rs  screenshot.rs  text_pipeline.rs
crates/akar-core/src/shaders/: blit.wgsl  quad.wgsl
crates/akar-layout/: Cargo.toml
crates/akar-layout/src/: canvas_transform.rs  lib.rs  rect.rs  responsive.rs
crates/akar-winit/: Cargo.toml
crates/akar-winit/src/: lib.rs
epics/: 001-exploration-and-architecture.md  002-core-renderer-and-draw-list.md  002-improvements.md  003-layout-containers.md  004-canvas.md  005-c-api.md  006-text-pipeline.md  007-container-styling.md  008-scroll-area-and-display.md  008-tbd.md  009-static-display-and-navigation.md  010-tabs-and-drawer.md  011-overlay-stack.md  012-form-controls-and-text-input.md  013-screenshot-utility.md  014-screenshot-enhancements.md  015-component-isolation.md  016-canvas-components-reuse.md  017-data-items-and-lists.md  018-text-editing-keybindings-and-clipboard.md
examples/akar-diff/: Cargo.toml
examples/akar-diff/src/: main.rs
examples/canvas-basic-rust/: Cargo.toml
examples/canvas-basic-rust/scripts/: interactive.txt  overview.txt  summary.txt
examples/canvas-basic-rust/src/: main.rs
examples/demo-rust/: Cargo.toml
examples/demo-rust/scripts/: open_dropdown.txt  text_edit_backspace.txt  text_edit_custom_bindings.txt  text_edit_paste.txt  text_edit_shortcuts.txt
examples/demo-rust/src/: main.rs  script.rs
