[package]
name = "akar-c-api"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "staticlib", "rlib"]

[dependencies]
akar-components = { path = "../akar-components" }
akar-core = { path = "../akar-core" }
akar-layout = { path = "../akar-layout" }
glyphon.workspace = true
wgpu.workspace = true

[build-dependencies]
cbindgen = "0.28"
