[package]
name = "canvas-basic-rust"
version = "0.1.0"
edition = "2021"

[dependencies]
akar-core = { path = "../../crates/akar-core" }
akar-layout = { path = "../../crates/akar-layout" }
akar-components = { path = "../../crates/akar-components" }
akar-winit = { path = "../../crates/akar-winit" }
glam = { workspace = true }
wgpu = { workspace = true }
winit = { workspace = true }
pollster = "0.4"
